<resources>
    <string name="app_name">Bulgaria Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bulgaria</string>
    <string name="nav_header_subtitle">The Silicon Valley of Europe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_bulgaria">Bulgaria</string>
    <string name="action_city_one">Sofia</string>
    <string name="action_city_two">Varna</string>
    <string name="action_city_three">Burgas</string>
    <string name="action_city_four">Plovdiv</string>
    <string name="action_about">About the app</string>
    <string name="skip">SKIP</string>
    <string name="category_first">Culture</string>
    <string name="category_second">Nightlife</string>
    <string name="category_third">History</string>
    <string name="category_fourth">Attractions</string>
    <string name="city_one">Sofia</string>
    <string name="city_two">Varna</string>
    <string name="city_three">Burgas</string>
    <string name="city_four">Plovdiv</string>
    <string name="bulgaria">BULGARIA</string>
    <string name="bulgarian_saying">When God gave the peoples of the world their lands, He had forgotten about the Bulgarians, and because there was no land left for them, He tore a piece of Heaven for them. - a Bulgarian saying.</string>
    <string name="about_bulgaria">Bulgaria, officially the Republic of Bulgaria is a country in the Balkans, west of the Black Sea. It borders Romania to the north, Serbia to the northwest, the Republic of Macedonia to the southwest, Greece to the south, and Turkey to the southeast.\n\nBeing located close to the Turkish Straits means the key land routes from Europe to the Middle East and Asia pass through Bulgaria. Thanks to this location, the territory of the country has been of interest to many peoples that have left their impact on the land. Remains of various civilizations and epochs are scattered all across the country and can still be seen today. From the tombs of the mighty Thracian kings, through the theatres of the ancient Greeks and the stadiums of the Roman Empire, to the medieval castles of the kings of the First and Second Bulgarian Empire, and the mosques from the Ottoman rule.\n\nPresent-day Bulgaria is one of the few remaining exotic destinations of Europe, because it boasts sublime beaches on its seaside, lovely churches and winter sport opportunities in its mountains, as well as a unique architectural ensemble of modern, classic and ethical styles in each of its cities and towns, to name a few. Although it is not as well travelled as other countries in Europe, it is a beautiful place, with a wide range of activities for the traveller to do. Despite not being a large country (approximately the size of Cuba, Portugal or the state of Virginia), Bulgaria offers a wide diversity of landscapes, each possessing its own unique beauty. Because of its natural diversity there is a great number of tourism opportunities in the country.\n\nThere is a wide variety of historical, natural, religious and artistic sights to see in Bulgaria. All across the country there are remains of different epochs and eras, societies and peoples, spiritual and artistic personae that create a beautiful mix of ethnic culture full of unique traditions and rituals combined with a sense of belonging to the movements that have shaped the world as we know it today. The Bulgarian tourist movement, established more than one hundred years ago, has promoted the acknowledgement of all the sights that form the distinguished Bulgarian identity through its so called "100 Tourist Sites of Bulgaria" program that covers most of Bulgaria\'s must-see attractions. Of course, nowadays the program includes more than two hundred and fifty one-of-a-kind places of interest but the name still remains.</string>
    <string name="about_city_one">Sofia is the capital and largest city of Bulgaria. 1.3 million people live in the city and 1.7 million people live in its metropolitan area. The city is at the foot of Vitosha Mountain in the western part of the country. Being in the centre of the Balkan peninsula, it is midway between the Black Sea and the Adriatic Sea, and closest to the Aegean Sea.\n\nSofia has been an area of human habitation since at least 7000 BC. Being Bulgaria\'s primate city, Sofia is a hometown of many of the major local universities, cultural institutions and commercial companies. Sofia is one of the top 10 best places for start-up business in the world, especially in information technologies. Sofia was Europe\'s most affordable capital to visit in 2013.\n\nSofia is one of the most visited tourist destinations in Bulgaria alongside coastal and mountain resorts. Among its highlights is the Alexander Nevsky Cathedral, one of the symbols of Bulgaria, constructed in the late 19th century. It occupies an area of 3,170 square metres (34,122 square feet) and can hold 10,000 people.\n\nSofia holds Bulgaria\'s largest museum collections, which attract tourists and students for practical studies. The National Historical Museum in Boyana district has a vast collection of more than 650,000 historical items dating from Prehistory to the modern era, although only 10,000 of them are permanently displayed due to the lack of space. Smaller collections of items related mostly to the history of Sofia are in the National Archaeological Museum, a former mosque located between the edifices of the National Bank and the Presidency. Two natural sciences museums — the Natural History Museum and the Earth and Man — display minerals, animal species (alive and taxidermic) and rare materials. The Ethnographic Museum and the National Museum of Military History are other places of interest, holding large collections of Bulgarian folk costumes and armaments, respectively.\n\nVitosha Boulevard, also called Vitoshka, is a pedestrian zone with numerous cafés, restaurants, fashion boutiques, and luxury goods stores. Sofia\'s geographic location, in the foothills of the weekend retreat Vitosha mountain, further adds to the city\'s specific atmosphere.</string>
    <string name="about_city_two">Varna is the third largest city in Bulgaria and the largest city and seaside resort on the Bulgarian Black Sea Coast. Situated strategically in the Gulf of Varna, the city has been a major economic, social and cultural centre for almost three millennia. Varna, historically known as Odessos, grew from a Thracian seaside settlement to a major seaport on the Black Sea.\n\nVarna is an important centre for business, transportation, education, tourism, entertainment and healthcare. The city is referred to as the maritime capital of Bulgaria and headquarters the Bulgarian Navy and merchant marine. In 2008, Varna was designated seat of the Black Sea Euroregion by the Council of Europe. In 2014, Varna was awarded the title of European Youth Capital 2017.\n\nThe oldest gold treasure in the world, belonging to the Varna culture, was discovered in the Varna Necropolis and dates to 4200–4600 BC.\n\nCity landmarks include the Varna Archaeological Museum, exhibiting the Gold of Varna, the Roman Baths, the Battle of Varna Park Museum, the Naval Museum in the Italianate Villa Assareto displaying the museum ship Drazki torpedo boat, the Museum of Ethnography in an Ottoman-period compound featuring the life of local urban dwellers, fisherfolk, and peasants in the late 19th and early 20th century.\n\nThe \'Sea Garden\' is the oldest and perhaps largest park in town containing an open-air theatre (venue of the International Ballet Competition, opera performances and concerts), Varna Aquarium (opened 1932), the Festa Dolphinarium (opened 1984), the Nicolaus Copernicus Observatory and Planetarium, the Museum of Natural History, a terrarium, a zoo, an alpineum, a children\'s amusement park with a pond, boat house and ice-skating rink, and other attractions. The National Revival Alley is decorated with bronze monuments to prominent Bulgarians, and the Cosmonauts\' Alley contains trees planted by Yuri Gagarin and other Soviet and Bulgarian cosmonauts. The Garden is a national monument of landscape architecture and is said to be the largest landscaped park in the Balkans.</string>
    <string name="about_city_three">Burgas, sometimes transliterated as Bourgas, is the second largest city on the Bulgarian Black Sea Coast and the fourth-largest in Bulgaria after Sofia, Plovdiv, and Varna, with a population of 211,033 inhabitants, while 277,922 live in its urban area. It is the capital of Burgas Province and an important industrial, transport, cultural and tourist centre.\n\nThe city is surrounded by the Burgas Lakes and located at the westernmost point of the Black Sea, at the large Burgas Bay. The LUKOIL Neftochim Burgas is the largest oil refinery in southeastern Europe and the largest industrial enterprise. The Port of Burgas is the largest port in Bulgaria, and Burgas Airport is the second most important in the country. Burgas is the center of the Bulgarian fishing and fish processing industry.\n\nThe Burgas Wetlands are highly recognized for their significance to biodiversity and as a resource pool for products used by people.\n\nLake Burgas is Bulgaria\'s largest lake and is in the middle of the city. It is important for migrating birds. Over 250 species of birds inhabit the lake area, 61 of which are endangered in Bulgaria and 9 globally, attracting keen birdwatchers from all over the world. The lakes are also home to important fish and invertebrates. In the site have been recorded several IUCN Red-Listed species of animals — 5 invertebrates, 4 fish, 4 amphibians, 3 reptiles, 5 birds and 3 mammals. Situated along the second largest migration path of birds in Europe, the Via Pontica, the site is an important stopover and staging site for a large number of water-birds, raptors and passerines. Yearly during migration and wintering more than 20,000 (up to 100,000) waterbirds congregate there.\n\nThe Atanasovo Lake is one of two salt-water lakes in the Black Sea region and contains rare and representative examples of wetland habitats. It is a hot spot for biodiversity, with many Red-Listed species of plants and animals. It is a well-known bottleneck site for migratory birds, with around 60,000 raptors and 240,000 storks, pelicans and cranes passing over the site and often landing in large numbers for staging. The highest numbers in Europe of migrating White Pelicans (Pelecanus onocrotalus), Dalmatian Pelicans (Pelecanus crispus), Marsh Harriers (Circus aeruginosus) and Red-footed Falcons (Falco vespertinus) have been recorded here.</string>
</resources>